--- a/src/CSSFile/Dashboard.css
+++ b/src/CSSFile/Dashboard.css
@@ -3,3 +3,20 @@
     display: flex;
     justify-content: flex-end;
 }
+
+.shift {
+    width: 4%;
+    display: flex;
+    justify-content: flex-end;
+}
+/* .dashboard{
+    display:flex;
+    justify-content: flex-end;
+    align-content: flex-start;
+    /* paddingLeft: "17%"; */
+    /* marginTop: "-3.1%"; */
+/* } */
+
+/* .lastlogin{
+    marginTop:"10%"
+}  */
